--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,12 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "name": "Python Debugger: Current File",
-            "type": "debugpy",
+            "type": "python",         // Make sure this is "python"
             "request": "launch",
-            "justMyCode": false,
-            "program": "${file}",
+            "justMyCode": false,       // Set to false to include all code (not just yours)
+            "program": "${file}",      // Program to debug
             "console": "integratedTerminal"
         }
     ]
